# morcus-net

./: .dockerignore  .eslintrc.json  .gitignore  .prettierignore  CODEOWNERS  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  binarystuff.ts  build.rs  codecov.yml  esbuild.config.ts  esbuild.editor.config.ts  eslint.config.mjs  first_time_setup.sh  gaffiot_numbrerd.txt  jest.config.js  lib.rs  main.py  morcus.sh  package-lock.json  package.json  playwright.config.ts  requirements.txt  run.py  run.sh  run.ts  run_morcus.ts  server_run.ts  set_up_or_update.sh  tsconfig.json  webpack.config.js  webpack.editor.config.js
.githooks/: pre-push
.github/: copilot-instructions.md
.github/workflows/: build-docker-image.yaml  build-image.yaml  ci-workflow.yaml  fast-forward.yaml  promote-image.yaml  pull-request.yaml
benches/: corpus_bench.rs
corpus_rust/: Cargo.toml
corpus_rust/benches/: corpus_bench.rs
corpus_rust/src/: analyzer_types.rs  api.rs  bitmask_utils.rs  build_corpus.rs  build_corpus_v2.rs  byte_readers.rs  common.rs  core.rs  corpus_index.rs  corpus_query_engine.rs  corpus_serialization.rs  index_data_utils.rs  lib.rs  main.rs  packed_arrays.rs  packed_index_utils.rs  query_parsing_v2.rs
corpus_rust/src/build_corpus/: corpus_serialization.rs
corpus_rust/src/build_corpus_v2/: library_utils.rs  string_processing.rs
corpus_rust/src/core/: analyzer_types.rs  common.rs  corpus_query_engine.rs  corpus_serialization.rs  profiler.rs
corpus_rust/src/corpus_query_engine/: corpus_candidate_filtering.rs  corpus_data_readers.rs  corpus_index_calculation.rs  corpus_query_conversion.rs  corpus_result_resolution.rs  errors.rs  index_calculation.rs  index_data.rs  query_conversion.rs  query_pruning.rs  query_validation.rs  reference_impl.rs
corpus_rust_wrapper/: Cargo.toml  lib.rs
morceus_rust/: Cargo.toml
morceus_rust/src/: ambiguous_uv_ij.rs  completions.rs  crunch.rs  indices.rs  inflection_data.rs  lib.rs  main.rs  stem_merging.rs
patches/canonical-latinLit/: phi1276.phi001.perseus-lat2.xml.patch.json
public/: assetlinks.json  pwa.webmanifest
scripts/: alatius.py
src/: driver.ts  main.ts  start_server.ts  ts_driver.ts
src/bundler/: esbuild_plugins.ts  morcus-net.esbuild.ts  morcus-net.rsbuild.ts  plugin_utils.ts  plugins.ts  rsbuild_plugins.ts  run_esbuild.ts  server.esbuild.ts  utils.ts
src/common/: assert.test.ts  assert.ts  character_utils.test.ts  character_utils.ts  env_vars.ts  ls_abbreviations.test.ts  ls_abbreviations.ts  ls_display.ts  ls_parser.test.ts  ls_parser.ts  ls_write.ts  misc_utils.test.ts  misc_utils.ts  perseus_parser.test.ts  perseus_parser.ts  sql_helper.test.ts  sql_helper.ts  sql_test_helper.ts  test_helpers.ts  text_cleaning.test.ts  text_cleaning.ts  texts.test.ts  texts.ts  worker_thread_helper.ts  xml_node.test.ts  xml_node_serialization.test.ts  xml_node_serialization.ts  xml_utils.ts
src/corpus-rust/: analyzer_types.rs  bitmask_utils.rs  common.rs  core.rs  corpus_query_engine.rs  corpus_serialization.rs  lib.rs  main.rs  packed_index_utils.rs  profiler.rs  profiling.rs  query_parsing.rs  query_parsing_v2.rs
src/devops/: .env.template  (+5 more)
templates/: pwa.webmanifest
(+525 files in other folders)
