[package]
name = "morcus-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "query-engine"
path = "src/corpus-rust/main.rs"

[dependencies]
base64 = "0.21.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
rusqlite = { version = "0.30", features = ["bundled"] }
regex = "1"
node-bindgen = { version = "6.0" }

[build-dependencies]
node-bindgen = { version = "6.0", default-features = false, features = ["build"] }

[lib]
crate-type = ["cdylib"]
path = "src/corpus-rust/lib.rs"

