[package]
name = "morcus-rust"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["corpus_rust_wrapper"]

[workspace.dependencies]
node-bindgen = "6.0"
serde_json = "1.0"

[dependencies]
base64 = "0.21.5"
node-bindgen.workspace = true
regex = "1"
rusqlite = { version = "0.30", features = ["backup", "bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json.workspace = true

[dev-dependencies]
criterion = "0.3"

[build-dependencies]
node-bindgen = { version = "6.0", default-features = false, features = ["build"] }

[[bin]]
name = "cli"
path = "src/corpus-rust/main.rs"

[[bench]]
name = "corpus_bench"
harness = false

[lib]
crate-type = ["rlib"]
path = "src/corpus-rust/lib.rs"
