[workspace]
members = ["corpus_rust", "morceus_rust"]

[package]
name = "corpus_rust_wrapper"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde_json = "1.0"

[dependencies]
corpus = { path = "corpus_rust" }
morceus = { path = "morceus_rust" }
node-bindgen = "6.0"
serde_json.workspace = true

[build-dependencies]
node-bindgen = { version = "6.0", default-features = false, features = ["build"] }

[lib]
crate-type = ["cdylib"]
path = "lib.rs"