[package]
name = "corpus"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.21.5"
regex = "1"
rusqlite = { version = "0.30", features = ["backup", "bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json.workspace = true

[dev-dependencies]
criterion = "0.3"

[[bin]]
name = "cli"
path = "src/main.rs"

[[bench]]
name = "corpus_bench"
harness = false

[lib]
crate-type = ["rlib"]
path = "src/lib.rs"
