[package]
name = "corpus"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json.workspace = true
memmap2 = "0.9"
libc = "0.2"

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}

[[bin]]
name = "cli"
path = "src/main.rs"

[[bench]]
name = "corpus_bench"
harness = false

[lib]
crate-type = ["rlib"]
path = "src/lib.rs"
