[package]
name = "corpus_rust_wrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
morcus-rust = { path = "../" }
serde_json.workspace = true
node-bindgen.workspace = true

[build-dependencies]
node-bindgen = { version = "6.0", default-features = false, features = ["build"] }

[lib]
crate-type = ["cdylib"]
path = "lib.rs"
